[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "genai-cmd"
version = "1.0.1"
description = "HuggingFace Integration with Command Line"
authors = [
    { name = "Solomon Ince", email = "solomon@solonce.com" }
]
license = { text = "MIT License" }
readme = "README.md"
requires-python= ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests==2.31.0"
]
