[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "genai_cmd"
version = "1.0.9"
description = "HuggingFace Integration with Command Line"
authors = [
    { name = "Solomon Ince", email = "solomon@solonce.com" }
]
license = { text = "MIT License" }
readme = "README.md"
requires-python= ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "requests==2.31.0",
    "termcolor==2.4.0",
    "pyfiglet==1.0.2",
    "colorama==0.4.6"
]

[project.scripts]
genai = "genai_cmd:start"
