[metadata]
name = genai-cmd
version = 1.0.1
author = Solomon Ince
author_email = solomon@solonce.com
description = A seemless way to use HuggingFace Inference API from Command Line.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Solonce/genai
project_urls =
     Bug Tracker = https://github.com/Solonce/genai/issues
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent

[options]
package_dir =
     = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
